test/errors/parameterized_types_error/zs/referenced_builtin_type_error.zs
package referenced_builtin_type_error;

subtype uint32 Item;

subtype Item Subtype;

struct ItemHolder
{
    uint32          version;
    Subtype(version)   item;
};
